kubernetes-ingress.yaml.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
#  annotations:
#kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: *********
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
